packages/kyvernoPolicies/chart/tests/mpol/update-image-pull-policy-cel/kyverno-test/patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tagged-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: digest-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal@sha256:0000000000000000000000000000000000000000000000000000000000000000
---
apiVersion: v1
kind: Pod
metadata:
  name: preset-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      imagePullPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: init-ephemeral-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      imagePullPolicy: Always
  initContainers:
    - name: init
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      imagePullPolicy: Always
  ephemeralContainers:
    - name: debug
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      targetContainerName: test
      imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tagged-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: test
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
          imagePullPolicy: Always
