packages/kyvernoPolicies/chart/tests/mpol/update-image-pull-policy-cel/kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tagged-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
# Digest-pinned image -> left untouched (no imagePullPolicy added)
apiVersion: v1
kind: Pod
metadata:
  name: digest-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal@sha256:0000000000000000000000000000000000000000000000000000000000000000
---
# Pre-set IfNotPresent on a tagged image -> rewritten to Always via the chain
apiVersion: v1
kind: Pod
metadata:
  name: preset-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      imagePullPolicy: IfNotPresent
---
# initContainers and ephemeralContainers are mutated too
apiVersion: v1
kind: Pod
metadata:
  name: init-ephemeral-pod
  namespace: default
spec:
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
  initContainers:
    - name: init
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
  ephemeralContainers:
    - name: debug
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      targetContainerName: test
---
# Controller pod template is mutated via autogen (ApplyConfiguration rewrites
# object.spec -> object.spec.template.spec). JSONPatch could not do this.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tagged-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: test
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
